@@ -1337,5 +1337,8 @@
 	  verify the LPC17xx ethernet driver currently under development.
 	* arch/arm/src/lpc17xx/lpc17xx_ethernet.c/.h - Began development of
 	  the LPC17xx Ethernet driver.
+	* sched/timer_settime.c - Fix an error in set-up of one-shot timer.  It was
+	  using the repititive timer value (which is zero in the one-shot case,
+	  always resulting in a 10Ms timer!  Found and fixed by Wilton Tong.
 
 
